=== CHANGELOG ===

v0.0.4alpha (unreleased)

  * Gods love certain sacrifices at any given time, which will net greatly increased favour.
  * Favour of object currently carried is indicated next to favour bars.
  * FIXED: Poison/growth status effects are not properly synchronised in network play.

v0.0.3alpha (2011-05-17)

  * === Now works on Linux from source (rolled back some libraries for maximum compatibility).
  * === Now works on OS X from source (rolled back some libraries for maximum compatibility).
  * === Executable for OS X 10.6 added.

  * Crown heals now, rather than allowing the wearer to fly (can still fly using the carpet, though!).
  * Overwrites the same log file each time it is run (before it created one for every run).
  * Instructions page, telling you how to play.
  * Audio settings in options.
  * Controls (keys/gamepad) settings in options.
  * Throwing items now makes them travel a lot further (Except throwing animals, which generally is less far now).
  * Creatures can be knocked down if hit with a sufficiently large thrown object.
  * Added a disaster to the forest/dryad level (trees awaken), the island level (lava rocks) and the pirate ship level (lightning).
  * Replaced game text overlay with a graphical overlay.
  * Made level-dependent gods and anger meter, which triggers disasters. Sacrifice reduces anger.
  * Added buttons to replay the game or return to the main menu when game ends.
  * FIXED: Ready indicators are left on when leaving a game.
  * FIXED: Sacrifice of the forest virgin crashes the game.
  * FIXED: Player objects skid around the screen when the game ends.

v0.0.2alpha (2011-05-10)

  * First public release.